--- a/kit/ui.css
+++ b/kit/ui.css
@@ -1,10 +1,3 @@
-*, :before, :after { box-sizing: inherit }
-
-html {
-  height: 100%;
-  box-sizing: border-box;
-}
-
 body {
   display: table;
   height: 100%;
